# fork-gemini-deepresearch

./: .gitignore  README.md
backend/: README.md  langgraph.json  pyproject.toml  test-agent.ipynb
backend/deep_research/: README.md  langgraph.json  multi_agent_supervisor.py  pyproject.toml  research_agent.py  research_agent_full.py  research_agent_mcp.py  research_agent_scope.py  state_multi_agent_supervisor.py  state_research.py  state_scope.py  utils.py
backend/deep_research/notebooks/: 1_scoping.ipynb  2_research_agent.ipynb  3_research_agent_mcp.ipynb  4_research_supervisor.ipynb  5_full_agent.ipynb
backend/examples/: cli_research.py
backend/src/agent/: configuration.py  graph.py  prompts.py  state.py  tools_and_schemas.py  utils.py
example/001-vite/: README.md
example/001-vite/my-react-app/: package-lock.json
example/002-vite-langgraph/: README.md
example/002-vite-langgraph/langgraph-backend/: graph.py  main.py
example/002-vite-langgraph/vite-frontend/: package-lock.json
example/002-vite-langgraph/vite-frontend/src/: App.jsx
example/003-stream/: README.md
example/003-stream/langgraph-backend/: main.py
example/003-stream/vite-frontend/: index.html  package.json
example/003-stream/vite-frontend/src/: App.jsx
example/004-chatgpt/: README.md
example/004-chatgpt/langgraph-backend/: graph.py
example/004-chatgpt/vite-frontend/: package-lock.json  package.json
example/004-chatgpt/vite-frontend/src/: App.jsx
frontend/: index.html  package-lock.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: ChatMessagesView.tsx  InputForm.tsx  WelcomeScreen.tsx
(+2 files in other folders)
