[project]
name = "agent"
version = "0.0.1"
description = "Backend for the LangGraph agent"
authors = [
    { name = "YanFeng Lu", email = "luyanfeng_nlp@qq.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain>=0.3.19",
    "python-dotenv>=1.0.1",
    "langgraph-sdk>=0.1.57",
    "langgraph-cli",
    "langgraph-api",
    "fastapi",
    "tavily>=1.1.0",
    "langchain-openai>=1.1.6",
]


[project.optional-dependencies]
dev = ["mypy", "black", "jupyter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["deep_research/**/*.py", "README.md"]

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = false
